# data_luminosity

backend/: README.md  pyproject.toml
backend/data/: README.md
backend/src/backend/clients/: label_studio.py  venues_data_2000.csv
backend/src/backend/defs/: resources.py
backend/src/backend/defs/annotate/: dispatch_annotations.py
backend/src/backend/defs/annotate/old/: 2023-03-07-assign-data.py  2023-09-21-assign-data.py  merge_annots.py  upload_annots_to_LS.py  upload_old_annots_to_LS.py
backend/src/backend/defs/data/lit_review/grant_impact_2018/: NatureDataAvailabilityStatementsdataset2018.xlsx
backend/src/backend/defs/data/lit_review/jones_observed_2025/: ASDC_AIES.csv  ASDC_AIJ.csv  ASDC_AI_in_Geo.csv  ASDC_MWR.csv  README.txt
backend/src/backend/defs/finetuning/: model_training.py
backend/src/backend/defs/import/: combined_annotations.py  create_s2orc_dark_data.py  extra_das.py  sample_s2orc_dark_data.py  scrape_gscholar.py
backend/src/backend/defs/ingestion/: more_datasets.py  s2orc_pipeline.py  scrape_gscholar.py
backend/src/backend/defs/process/: semantic_deduplication.py  training_dataset.py
backend/src/backend/defs/transform/: combined_annotations.py  semantic_deduplication.py  training_dataset.py
frontend/: package.json  pnpm-lock.yaml
